# FileRedirect

./: .gitignore  MyNote.md  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/qssq666/fileredirect/: ExampleInstrumentedTest.java
app/src/androidTest/java/top/lozn/fileredirect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: QSSQ_CheckEnvImpl.cpp  QSSQ_CheckEnvImpl.h  QSSQ_Constant.cpp  QSSQ_INT_ARR.h  QSSQ_hkkq.cpp  base64.c  base6_with_test.c  bytesencrypt.cpp  md5Helper.c
app/src/main/cpp/android/Foundation/: ALog.h  AMyLog.h  Environment.cpp  Helper.h  IOUniformer.cpp  IOUniformer.h  JniHelper.h  SandboxFs.cpp  SandboxFs.h  SymbolFinder.cpp  VAJni.cpp  VAJni.h  VMPatch.cpp
app/src/main/cpp/hookzz/: Android.mk  Application.mk  CMakeLists.txt
app/src/main/cpp/hookzz/srcxx/: CMakeCache.txt  build.bat
app/src/main/cpp/hookzz/srcxx/vm_core/: logging.h
app/src/main/java/cn/qssq666/: QSSQHook.java
app/src/main/java/cn/qssq666/fileredirect/: AppContext.java  MainActivity.java
app/src/main/java/top/lozn/: QSSQHook.java
app/src/main/java/top/lozn/fileredirect/: AppContext.java  (+1 more)
app/src/main/jni/: Android.mk  Application.mk
app/src/main/jni/Foundation/: IOUniformer.cpp  IOUniformer.h  Log.h  SandboxFs.cpp  VMHook.cpp
app/src/main/jni/Include/: base64.h
app/src/main/jni/Jni/: VAJni.cpp  VAJni.h
app/src/main/jni/My/: AMyLog.h  JniHelper.cpp  JniHelper.h  QSSQ_CheckEnvImpl.cpp  QSSQ_Constant.cpp  QSSQ_hkkq.cpp  androidbase64.c  androidbase64.h  base64.c  base6_with_test.c  bytesencrypt.cpp  bytesencrypt.h  md5.c  testbase64.c
app/src/main/jni/Substrate/: SubstrateHook.cpp
app/src/main/jni/safekey/: safekey_jni.cpp
app/src/main/jni/utils/: controllerManagerNative.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
(+6 files in other folders)
